# time-goals

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/time_goals/: helpers.py  main.py  models.py  reporting.py  time_goals.py
time_goals/: cli.py  helpers.py  models.py  parsers.py  time_goals.py
time_tracker/: helpers.py  main.py  models.py  reporting.py  time_tracker.py
