[tool.poetry]
name = "time_tracker"
version = "0.1.0"
description = ""
authors = ["Alex Kim <alex@ajpkim.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
